[FIX][UI] Bad color contrast on dropdown-item text-danger. Thanks, Marc.

--- a/themes/feb12/scss/_tiki-selectors.scss
+++ b/themes/feb12/scss/_tiki-selectors.scss
@@ -1,5 +1,5 @@
 // $Id$
-// This file is for additional LESS rules beyond what are in variables.scss.
+// This file is for additional SCSS rules beyond what are in variables.scss.
 // Image path example:
 $imagePath: "../images/";
 // body {
@@ -239,4 +239,14 @@ body.fullscreen {
 
 .autotoc .dropdown-item {
 	color: $link-color;
+}
+
+// Fix bad contrast
+.dropdown-item.text-danger {
+	background: #fff;
+	border-radius: 0;
+	&:hover {
+		color: #fff !important;
+		background-color: #d9534f;
+	}
 }
